[package]
name = "spelltower-solver"
version = "0.1.0"
authors = ["Michael Lieberman <mlieberman85@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
tesseract-sys = "0.5.5"
tesseract = "0.8.0"